--- a/notebooks/overall_report.Rmd
+++ b/notebooks/overall_report.Rmd
@@ -68,5 +68,17 @@ gg + geom_histogram(binwidth = 5) +
 
 Distributions of the number of tokens and number of unique tokens are extremely similar, i.e., most of the time tokens occur only once in a document. Most ads have **35 or fewer** tokens.
 
+## Thoughts and Notes on Labor
+
+- Warnings w.r.t. former employees are among ads recognized by filter but not human classification
+
+- Workforce moving into other flats / parts of the city may not be a true labor ad, but nevertheless could stay labor because the indicate practices. 
+
+- Debatable: temporal events cooking. Offer of services, cleaning etc.  
+
+- room offers suitable for certain practices are a challenge
+
+
+
 
 
